✨ feat: add validations and improve error handling
Adds parameter validation to ExchangeRate entity | Improves exception flow and error handling | Adjusts ExchangeRateMapper to validate JSON and DTO